--- a/app/frontend/molecules/Header/Header.css
+++ b/app/frontend/molecules/Header/Header.css
@@ -1,8 +1,6 @@
 @custom-media --motion-ok (prefers-reduced-motion: no-preference);
 
 .header {
-  --max-header-width: 75rem;
-
   display: grid;
   grid-template:
     "dates dates" auto
@@ -10,14 +8,42 @@
   grid-template-columns: auto auto;
   gap: var(--large);
   align-items: center;
-  padding-inline: max(var(--large), calc(50vw - var(--max-header-width) / 2));
+  padding-inline: var(--horizontal-padding);
   padding-block: var(--large);
   border-bottom: 1px solid var(--border-subtle);
   transition: border-color 0.5s var(--ease-3);
 
-  @media screen and (width >= 1025px) {
+  @media screen and (width > 1024px) {
     grid-template: "logo dates user" auto;
     grid-template-columns: 1fr auto 1fr;
+  }
+
+  .button {
+    display: flex;
+    gap: var(--small);
+    align-items: center;
+    padding: var(--small);
+    border: 0;
+    border-radius: var(--huge);
+    background-color: transparent;
+    color: var(--text-subtle);
+    font: inherit;
+    cursor: pointer;
+
+    &__text {
+      flex: 1;
+      padding: 0 var(--small);
+      text-align: center;
+    }
+
+    &:hover {
+      background-color: var(--background-hover);
+      color: var(--text);
+    }
+
+    svg {
+      stroke: currentcolor;
+    }
   }
 
   &__dates {
@@ -25,6 +51,7 @@
     justify-self: center;
     color: var(--text-subtle);
     text-align: center;
+    white-space: nowrap;
   }
 
   &__logo {
@@ -43,28 +70,12 @@
     justify-self: end;
 
     .button {
-      display: flex;
-      gap: var(--small);
-      align-items: center;
-      padding: var(--small);
-      border: 0;
-      border-radius: var(--huge);
-      background-color: transparent;
-      color: var(--text-subtle);
-      font: inherit;
-      cursor: pointer;
-
       &__text {
-        padding: 0 var(--small);
-      }
+        display: none;
 
-      &:hover {
-        background-color: var(--background-hover);
-        color: var(--text);
-      }
-
-      svg {
-        stroke: currentcolor;
+        @media screen and (width > 768px) {
+          display: unset;
+        }
       }
     }
   }
@@ -74,102 +85,115 @@
       outline: 0.125rem solid var(--accent11);
     }
   }
+
+  &__overlay {
+    --background: var(--background-subtle);
+    --padding-block: calc(var(--large) * 2 + 1.5rem);
+    --padding-inline: calc(var(--horizontal-padding) + var(--huge) + var(--small));
+    --cx: calc(100vw - var(--padding-inline) - var(--huge) / 2);
+    --cy: calc(var(--padding-block) + var(--huge) / 2);
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    display: grid;
+    grid-template-rows: var(--huge) 1fr var(--huge);
+    grid-template-columns: 1fr;
+    gap: var(--large);
+    align-items: center;
+    justify-items: center;
+    min-height: 100vh;
+    padding: var(--padding-block) var(--padding-inline);
+    background: var(--background);
+    pointer-events: none;
+    clip-path: circle(1.25rem at var(--cx) var(--cy));
+
+    &__toggle {
+      justify-self: end;
+    }
+
+    &[aria-expanded] {
+      pointer-events: auto;
+    }
+  }
 }
 
-.theme-switch {
-  --transition-duration: .5s;
-
-  display: flex;
+.login {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--spacing);
+  justify-content: center;
   align-items: center;
-  padding: var(--small);
-  border: 0;
-  border-radius: 50%;
-  background: transparent;
-  color: var(--text-subtle);
-  box-shadow: none;
-  cursor: pointer;
-  appearance: none;
+  width: 24rem;
+  max-width: calc(100vw - var(--padding-inline) * 2);
 
-  @media (--motion-ok) {
-    .sun {
-      transition: transform var(--transition-duration) var(--ease-elastic-3);
-    }
-
-    .sun-beams {
-      transition: transform var(--transition-duration) var(--ease-elastic-4),
-        opacity var(--transition-duration) var(--ease-3);
-    }
-
-    .moon circle {
-      transition: transform .25s var(--ease-out-5);
-
-      @supports (cx: 1) {
-        transition: cx .25s var(--ease-out-5);
-      }
-    }
+  h2,
+  input {
+    grid-column: 1 / -1;
   }
 
-  &:hover {
+  h2 {
+    margin: 0;
+    color: var(--accent11);
+    font-size: 5rem;
+    line-height: 1.2;
+  }
+
+  input {
+    padding: var(--small) var(--spacing);
+    border: 0;
+    border-radius: var(--tiny);
+    background: var(--background-element);
     color: var(--text);
-  }
+    font: inherit;
+    font-size: 1.25rem;
 
-  .sun-beams {
-    stroke: currentcolor;
-    stroke-width: 2px;
-    stroke-linecap: round;
+    &::placeholder {
+      color: var(--text-subtle);
+    }
 
-    .theme-toggle:is(:hover, :focus-visible) & {
-      stroke: currentcolor;
+    &:hover {
+      background-color: var(--background-hover);
+    }
+
+    &:focus {
+      outline: 2px solid var(--accent11);
+      outline-offset: -1px;
     }
   }
 
-  [data-theme="dark"] & {
-    @media (--motion-ok) {
-      .sun-beams {
-        transition-duration: .15s;
-        transform: rotateZ(-25deg);
-      }
-
-      .moon circle {
-        transition-delay: .25s;
-        transition-duration: var(--transition-duration);
-      }
-    }
-
-    .sun {
-      transform: scale(1.75);
-
-      @media (--motion-ok) {
-        transition-timing-function: var(--ease-3);
-        transition-duration: .25s;
-        transform: scale(1.75)
-      }
-    }
-
-    /* stylelint-disable-next-line no-descending-specificity */
-    .sun-beams {
-      opacity: 0;
-    }
-
-    .moon circle {
-      transform: translateX(-7px);
-
-      @supports (cx: 1) {
-        transform: translateX(0);
-        cx: 17;
-      }
+  .button {
+    &[data-variant="primary"] {
+      grid-column: 1 / -1;
+      border-radius: var(--tiny);
+      background-color: var(--solid-accent);
+      color: var(--contrast-accent);
+      font-weight: 600;
+      font-size: 1.25rem;
     }
   }
 
-  :is(.moon, .sun, .sun-beams) {
-    transform-origin: center center;
-  }
+  .separator {
+    position: relative;
+    grid-column: 1 / -1;
+    margin: var(--small) 0;
+    border: 0;
+    border-top: 1px solid var(--border-subtle);
 
-  :is(.moon, .sun) {
-    fill: currentcolor;
-
-    .theme-toggle:is(:hover, :focus-visible) > & {
-      fill: currentcolor;
+    &::after {
+      content: "OR";
+      position: absolute;
+      top: -0.75em;
+      left: 50%;
+      width: 3em;
+      height: 1.5em;
+      margin: 0 -1.5em;
+      background-color: var(--background);
+      color: var(--text-subtle);
+      font-size: 0.75rem;
+      letter-spacing: 0.1em;
+      text-align: center;
     }
   }
 }
