--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -1,9 +1,13 @@
 @import url('@radix-ui/colors/slate.css');
 @import url('@radix-ui/colors/slateDark.css');
+@import url('@radix-ui/colors/slateA.css');
+@import url('@radix-ui/colors/slateDarkA.css');
 @import url('@radix-ui/colors/crimson.css');
 @import url('@radix-ui/colors/crimsonDark.css');
 @import url('@radix-ui/colors/crimsonA.css');
 @import url('@radix-ui/colors/crimsonDarkA.css');
+@import url('@radix-ui/colors/orange.css');
+@import url('@radix-ui/colors/orangeDark.css');
 
 
 :where(html){
@@ -54,10 +58,15 @@
   --spacing: 1rem;
   --large: 1.5rem;
   --huge: 2.5rem;
+  --icon-size: 1.5rem;
 
   /* White space */
   --max-width: 75rem;
   --horizontal-padding: max(var(--large), calc((100vw - var(--max-width)) / 2));
+
+  /* Stacking */
+  --z-index-overlay: 10;
+  --z-index-overlay-toggle: 11;
 
   color-scheme: light dark;
   font-synthesis: none;
@@ -67,7 +76,7 @@
   text-size-adjust: 100%;
 }
 
-body {
+:where(body) {
   /* Neutral colors */
   --neutral1: var(--slate1);
   --neutral2: var(--slate2);
@@ -81,6 +90,18 @@ body {
   --neutral10: var(--slate10);
   --neutral11: var(--slate11);
   --neutral12: var(--slate12);
+  --neutralA1: var(--slateA1);
+  --neutralA2: var(--slateA2);
+  --neutralA3: var(--slateA3);
+  --neutralA4: var(--slateA4);
+  --neutralA5: var(--slateA5);
+  --neutralA6: var(--slateA6);
+  --neutralA7: var(--slateA7);
+  --neutralA8: var(--slateA8);
+  --neutralA9: var(--slateA9);
+  --neutralA10: var(--slateA10);
+  --neutralA11: var(--slateA11);
+  --neutralA12: var(--slateA12);
 
   /* Accent colors */
   --accent1: var(--crimson1);
@@ -134,6 +155,7 @@ body {
   --text-subtle-accent: var(--accent10);
   --text-accent: var(--accent11);
   --contrast-accent: var(--accent1);
+  --white: var(--accent1);
 
   margin: 0;
   background-color: var(--background);
@@ -141,6 +163,10 @@ body {
   font-family: var(--font-family-base);
   line-height: 1.5;
   transition: all 0.5s var(--ease-3);
+}
+
+:where([data-theme="dark"]) {
+  --white: var(--neutral12);
 }
 
 *,
