--- a/app/frontend/styles/colors.css
+++ b/app/frontend/styles/colors.css
@@ -8,6 +8,8 @@
 @import url('@radix-ui/colors/crimsonDarkA.css');
 @import url('@radix-ui/colors/orange.css');
 @import url('@radix-ui/colors/orangeDark.css');
+@import url('@radix-ui/colors/amber.css');
+@import url('@radix-ui/colors/amberDark.css');
 
 :where(body) {
   /* Neutral colors */
