--- a/app/frontend/styles/typography.css
+++ b/app/frontend/styles/typography.css
@@ -8,11 +8,14 @@
   --font-size-tiny: 0.75rem;
   --font-size-small: 0.875rem;
   --font-size-medium: 1rem;
+  --font-size-legible: 1.125rem;
   --font-size-large: 1.25rem;
+  --font-size-huge: 2rem;
   --line-height-tiny: 1rem;
   --line-height-small: 1.25rem;
   --line-height-medium: 1.5rem;
   --line-height-large: 2rem;
+  --line-height-huge: 3rem;
   --font-stack: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
   --font-family-base: "Archivo", var(--font-stack);
   --wide: "wdth" 125;
