--- a/app/frontend/pages/Contentful/Contentful.css
+++ b/app/frontend/pages/Contentful/Contentful.css
@@ -42,6 +42,7 @@
   &__content {
     grid-row: 2;
     grid-column: 1;
+    padding-block: 2rem;
     line-height: 2rem;
 
     h2 {
@@ -107,8 +108,14 @@
 
     @media (--two-columns) {
       position: sticky;
-      top: 2rem;
+      top: 0;
       grid-column: 2;
+      overflow-y: auto;
+      max-height: 100vh;
+      max-height: 100dvh;
+      max-height: 100svh;
+      padding-block: 2rem;
+      padding-inline-end: 2rem;
     }
 
     [type="checkbox"] {
