full text search ✌️

--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -8,6 +8,7 @@
   /* Stacking */
   --z-index-overlay: 10;
   --z-index-overlay-toggle: 11;
+  --z-index-search: 20;
 
   color-scheme: light dark;
   font-synthesis: none;
