--- a/app/frontend/pages/Contentful/Contentful.css
+++ b/app/frontend/pages/Contentful/Contentful.css
@@ -13,7 +13,7 @@
   }
 
   &__header {
-    grid-column: 1;
+    grid-column: 1 / -1;
     margin: 0 0 4rem calc(var(--min-horizontal-padding) * -1);
     padding-top: 6rem;
     padding-left: calc(var(--min-horizontal-padding) - 0.5rem);
@@ -22,15 +22,15 @@
     h1 {
       margin: 0;
       color: var(--text-accent);
-      font-size: 4rem;
-      line-height: 1.25;
+      font-size: clamp(1.25rem, 1rem + 3.5vw, 4rem);
+      line-height: 1.1;
       font-variation-settings: var(--wide);
     }
   }
 
   &__lede {
     color: var(--text-subtle);
-    font-size: var(--font-size-huge);
+    font-size: 1.25rem;
     line-height: var(--line-height-huge);
     font-variation-settings: "wdth" 110;
 
@@ -43,58 +43,120 @@
     grid-row: 2;
     grid-column: 1;
     padding-block: 2rem;
-    line-height: 2rem;
 
-    h2 {
+    /* background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      transparent calc(2rem - 1px),
+      var(--border-subtle) calc(2rem - 1px),
+      var(--border-subtle) 100%
+    ); */
+    background-size: 100% 2rem;
+    font-size: 1rem;
+    line-height: 2;
+
+    :where(*) {
       margin: 0;
-      padding: 0.75rem 0;
-      font-size: 2rem;
-      line-height: 2.5rem;
+      font-size: 1em;
+      line-height: inherit;
     }
 
-    h3 {
-      margin: 0;
-      padding: 1rem 0;
-      font-size: 1.5rem;
-      line-height: 2rem;
-    }
-
-    p {
-      margin: 0 0 2rem;
-    }
-
-    ul, ol {
-      margin: 0 0 2rem;
+    :where(p, ul, ol) {
+      margin: 2em 0;
       padding: 0;
+    }
+
+    :where(h2, h3) {
+      margin: 4rem 0 2rem;
+    }
+
+    :where(h2) {
+      font-size: 2.25rem;
+      line-height: 1.7778;
+
+      + h3 {
+        margin-top: 0;
+      }
+    }
+
+    :where(h3) {
+      color: var(--text-subtle);
+      font-weight: var(--font-weight-normal);
+      font-size: 1.5rem;
+      line-height: 1.3333;
+    }
+
+    :where(li) {
+      display: grid;
+      grid-template-columns: var(--icon-size) 1fr;
+      margin: 0;
+      padding: 0;
+      list-style-position: inside;
+      column-gap: var(--spacing);
+
+      &::before {
+        grid-column: 1;
+      }
+
+      > * {
+        grid-column: 2;
+      }
+
+      p:not(:last-child) {
+        margin-bottom: 0;
+      }
+
+      ul, ol {
+        margin-top: 0;
+      }
 
       li {
-        margin: 0 0 1rem 2rem;
-        padding: 0;
-
         p {
           margin: 0;
         }
       }
+    }
 
-      ul, ol {
-        margin-top: 1rem;
-        margin-bottom: 0;
+    :where(ul > li) {
+      &::before {
+        content: "";
+        align-self: flex-start;
+        justify-self: center;
+        width: 0.75rem;
+        height: 0.75rem;
+        margin: 0.625rem 0;
+        border: 1.5px solid var(--text-subtle);
+        border-radius: 37.5%;
       }
     }
 
-    ol ul {
-      list-style-type: disc;
+    > ol {
+      counter-reset: ordered-list;
+
+      > li {
+        counter-increment: ordered-list;
+
+        &::before {
+          content: counter(ordered-list) ".";
+          text-align: right;
+        }
+      }
+
+      ol {
+        counter-reset: ordered-list-2;
+
+        > li {
+          counter-increment: ordered-list-2;
+
+          &::before {
+            content: counter(ordered-list-2, roman) ".";
+          }
+        }
+      }
     }
 
-    blockquote {
-      margin: 0 2rem 2rem 0;
-      padding: 1rem 1.5rem;
-      border-left: 0.5rem solid var(--accent9);
-      background-color: var(--accent2);
-
-      :last-child {
-        margin-bottom: 0;
-      }
+    :first-child {
+      margin-top: 0;
     }
   }
 
@@ -179,8 +241,13 @@
     }
 
     a {
+      display: block;
+      overflow: hidden;
       color: var(--text-subtle);
+      line-height: 2rem;
       text-decoration: none;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
       &:hover {
         color: var(--accent);
