--- a/app/frontend/styles/typography.css
+++ b/app/frontend/styles/typography.css
@@ -25,5 +25,5 @@ body {
   font-size: var(--font-size-medium);
   font-family: var(--font-family-base);
   line-height: calc(var(--line-height-medium) / var(--font-size-medium));
-  font-feature-settings: "cv03", "cv04", "cv11"
+  font-feature-settings: "cv03", "cv04", "cv11";
 }
