--- a/app/frontend/pages/Admin/Timetable/Timetable.css
+++ b/app/frontend/pages/Admin/Timetable/Timetable.css
@@ -82,18 +82,38 @@
         border-bottom: 0;
       }
     }
+
+    &__selection {
+      border-radius: var(--border-radius-standard);
+      background: var(--accentA3);
+      outline: none;
+    }
+  }
+
+  &__selection {
+    &--ghost {
+      opacity: 0;
+      pointer-events: none;
+    }
   }
 
   &__slot {
     position: relative;
+    z-index: 0;
+    display: flex;
+    gap: var(--small);
+    justify-content: center;
+    align-items: center;
     min-height: 3.5rem;
+    color: var(--neutral9);
 
     &::before {
       content: "";
       position: absolute;
       inset: 2px 3px 3px 2px;
+      z-index: -1;
       border-radius: var(--border-radius-standard);
-      background-color: var(--neutralA3);
+      background-color: var(--neutral3);
     }
 
     .grid[data-selecting] & {
@@ -102,4 +122,190 @@
   }
 }
 
+.popover  {
+  --popover-border: var(--neutral6);
+  --popover-background: var(--background-subtle);
 
+  z-index: var(--z-index-popover);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 24rem;
+  height: 32rem;
+  border: var(--border-width-standard) solid var(--popover-border);
+  border-radius: var(--border-radius-large);
+  background-color: var(--popover-background);
+  box-shadow: var(--shadow-4);
+
+  &__header {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 0 var(--spacing);
+    margin-bottom: var(--spacing);
+    padding: var(--large) var(--large) var(--small);
+
+    h3,
+    h4 {
+      grid-column: 1;
+      margin: 0;
+    }
+
+    .button {
+      grid-row: 1 / span 2;
+      grid-column: 2;
+      align-self: flex-start;
+      margin: -0.5rem;
+    }
+
+    h4 {
+      font-weight: var(--font-weight-normal);
+    }
+  }
+
+  &__title {
+    margin: 0;
+    color: var(--text-subtle);
+    font-size: var(--font-size-large);
+    line-height: var(--line-height-large);
+  }
+
+  &__body {
+    --scrollable-edge-color: hsl(var(--shadow-hsl) / 9%);
+  }
+
+  &__footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--small) var(--spacing);
+    padding: var(--large);
+
+    .button {
+      flex: 1;
+    }
+  }
+}
+
+.new-slot {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+  align-items: stretch;
+  padding: var(--small) var(--large);
+
+  &__options {
+    display: flex;
+    flex-direction: column;
+    gap: var(--tiny);
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    li {
+      margin: 0;
+      padding: 0;
+
+      &:only-child {
+        grid-column: 1 / -1;
+      }
+    }
+
+    label {
+      display: flex;
+      gap: var(--spacing);
+      align-items: center;
+      padding: var(--small);
+      border-radius: var(--border-radius-standard);
+      background: var(--neutral3);
+
+      &[aria-disabled] {
+        background: transparent;
+        text-decoration: line-through;
+        opacity: var(--disabled-opacity);
+      }
+
+      .checkbox::before {
+        display: none;
+      }
+    }
+  }
+
+  &__dates {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: column;
+    gap: var(--small);
+  }
+}
+
+.select {
+  &__trigger {
+    width: unset;
+
+    .button__text {
+      flex: 1;
+      font-weight: var(--font-weight-normal);
+      text-align: left;
+    }
+  }
+
+  &__content {
+    overflow: hidden;
+    padding: calc(var(--border-radius-large) - var(--border-radius-standard));
+    border-radius: var(--border-radius-large);
+    background-color: var(--background-subtle);
+    box-shadow: var(--shadow-4);
+  }
+
+  &__item {
+    position: relative;
+    z-index: var(--z-index-select-content);
+    display: grid;
+    grid-template-columns: var(--icon-size) 1fr;
+    gap: var(--small);
+    align-items: center;
+    height: var(--huge);
+    padding: 0 var(--small);
+    border-radius: var(--border-radius-standard);
+    font-size: var(--font-size-medium);
+    line-height: var(--line-height-medium);
+    user-select: none;
+
+    &__text {
+      grid-column: 2;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    &__indicator {
+      display: block;
+      display: contents;
+      color: var(--accent11);
+    }
+
+    &[data-disabled] {
+      color: var(--text-subtle);
+      opacity: var(--disabled-opacity);
+      pointer-events: none;
+    }
+
+    &[data-highlighted] {
+      background-color: var(--accent4);
+      color: var(--accent11);
+      outline: none;
+    }
+  }
+
+  &__viewport {
+    padding: var(--tiny);
+  }
+
+  &__scroll-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: var(--icon-size);
+    background-color: var(--background-subtle);
+    color: var(--text-subtle);
+    cursor: default;
+  }
+}
