--- a/app/frontend/styles/colors.css
+++ b/app/frontend/styles/colors.css
@@ -107,8 +107,13 @@
   --placeholder-opacity: 0.75;
 }
 
+:where([data-theme="light"]) {
+  --popup-border: var(--background-subtle);
+}
+
 :where([data-theme="dark"]) {
   --white: var(--neutral12);
+  --popup-border: var(--neutral3);
 }
 
 *::selection {
