--- a/app/frontend/pages/Admin/Timetable/Timetable.css
+++ b/app/frontend/pages/Admin/Timetable/Timetable.css
@@ -9,6 +9,18 @@
   &__grid {
     overflow: scroll;
     height: 100vh;
+
+    &[data-resizing="true"] {
+      cursor: ew-resize;
+
+      .timetable__slot {
+        pointer-events: none;
+      }
+
+      .grid__cell {
+        cursor: unset;
+      }
+    }
   }
 
   .grid {
@@ -16,7 +28,7 @@
     --row-height: auto;
     --row-header-width: max(var(--horizontal-padding), 10rem);
     --column-header-height: var(--large);
-    --grid-background-header: transparent;
+    --grid-background-header: var(--background);
     --grid-background-cell: transparent;
 
     width: calc(var(--row-header-width) * var(--row-headers) + var(--column-width) * var(--columns));
@@ -32,42 +44,48 @@
       &:not(:nth-child(4n+1)) {
         border-right: 0;
       }
+
+      &:not(:nth-child(4n+2)) {
+        background: transparent;
+      }
     }
 
     &__row-header{
-      &:not(.grid__column-header) {
-        display: grid;
-        grid-template-rows: 1.5rem 1.5rem;
-        grid-template-columns: 1fr auto;
-        gap: var(--small);
-        align-items: center;
-        justify-items: flex-end;
-        align-self: stretch;
-        padding: var(--small);
-        border-bottom: 0;
-        background-color: var(--background);
-        font-size: var(--font-size-small);
-        line-height: 1;
-
-        .weekday {
-          align-self: flex-end;
-        }
-
-        .month {
-          align-self: flex-start;
-        }
-
-        .day {
-          grid-row: 1 / -1;
-          grid-column: 2;
-          font-weight: 200;
-          font-size: var(--huge);
-          line-height: 1;
-        }
-      }
-
       &.grid__column-header {
         background-color: var(--background);
+      }
+    }
+
+    .timetable__date {
+      position: sticky;
+      top: 2.25rem;
+      display: grid;
+      grid-template-rows: 1.5rem 1.5rem;
+      grid-template-columns: 1fr auto;
+      gap: var(--small);
+      align-items: center;
+      justify-items: flex-end;
+      align-self: stretch;
+      padding: var(--small);
+      border-bottom: 0;
+      background-color: var(--background);
+      font-size: var(--font-size-small);
+      line-height: 1;
+
+      .weekday {
+        align-self: flex-end;
+      }
+
+      .month {
+        align-self: flex-start;
+      }
+
+      .day {
+        grid-row: 1 / -1;
+        grid-column: 2;
+        font-weight: 200;
+        font-size: var(--huge);
+        line-height: 1;
       }
     }
 
@@ -127,6 +145,23 @@
 
     .grid[data-selecting] & {
       pointer-events: none;
+    }
+  }
+
+  &__resize-handle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: var(--small);
+    background: transparent;
+    cursor: ew-resize;
+
+    &[data-side="start"] {
+      left: 0;
+    }
+
+    &[data-side="end"] {
+      right: 0;
     }
   }
 }
