--- a/app/frontend/styles/colors.css
+++ b/app/frontend/styles/colors.css
@@ -18,10 +18,10 @@
 @import url('@radix-ui/colors/cyanDark.css');
 @import url('@radix-ui/colors/cyanA.css');
 @import url('@radix-ui/colors/cyanDarkA.css');
-@import url('@radix-ui/colors/grass.css');
-@import url('@radix-ui/colors/grassDark.css');
-@import url('@radix-ui/colors/grassA.css');
-@import url('@radix-ui/colors/grassDarkA.css');
+@import url('@radix-ui/colors/yellow.css');
+@import url('@radix-ui/colors/yellowDark.css');
+@import url('@radix-ui/colors/yellowA.css');
+@import url('@radix-ui/colors/yellowDarkA.css');
 
 :where(body) {
   /* Neutral colors */
@@ -111,54 +111,79 @@
   --input-inactive: var(--neutral7);
 
   /* Activity colors */
-  --show1: var(--cyan1);
-  --show2: var(--cyan2);
-  --show3: var(--cyan3);
-  --show4: var(--cyan4);
-  --show5: var(--cyan5);
-  --show6: var(--cyan6);
-  --show7: var(--cyan7);
-  --show8: var(--cyan8);
-  --show9: var(--cyan9);
-  --show10: var(--cyan10);
-  --show11: var(--cyan11);
-  --show12: var(--cyan12);
-  --showA1: var(--cyanA1);
-  --showA2: var(--cyanA2);
-  --showA3: var(--cyanA3);
-  --showA4: var(--cyanA4);
-  --showA5: var(--cyanA5);
-  --showA6: var(--cyanA6);
-  --showA7: var(--cyanA7);
-  --showA8: var(--cyanA8);
-  --showA9: var(--cyanA9);
-  --showA10: var(--cyanA10);
-  --showA11: var(--cyanA11);
-  --showA12: var(--cyanA12);
-  --workshop1: var(--grass1);
-  --workshop2: var(--grass2);
-  --workshop3: var(--grass3);
-  --workshop4: var(--grass4);
-  --workshop5: var(--grass5);
-  --workshop6: var(--grass6);
-  --workshop7: var(--grass7);
-  --workshop8: var(--grass8);
-  --workshop9: var(--grass9);
-  --workshop10: var(--grass10);
-  --workshop11: var(--grass11);
-  --workshop12: var(--grass12);
-  --workshopA1: var(--grassA1);
-  --workshopA2: var(--grassA2);
-  --workshopA3: var(--grassA3);
-  --workshopA4: var(--grassA4);
-  --workshopA5: var(--grassA5);
-  --workshopA6: var(--grassA6);
-  --workshopA7: var(--grassA7);
-  --workshopA8: var(--grassA8);
-  --workshopA9: var(--grassA9);
-  --workshopA10: var(--grassA10);
-  --workshopA11: var(--grassA11);
-  --workshopA12: var(--grassA12);
+  --show-1: var(--cyan1);
+  --show-2: var(--cyan2);
+  --show-3: var(--cyan3);
+  --show-4: var(--cyan4);
+  --show-5: var(--cyan5);
+  --show-6: var(--cyan6);
+  --show-7: var(--cyan7);
+  --show-8: var(--cyan8);
+  --show-9: var(--cyan9);
+  --show-10: var(--cyan10);
+  --show-11: var(--cyan11);
+  --show-12: var(--cyan12);
+  --show-A1: var(--cyanA1);
+  --show-A2: var(--cyanA2);
+  --show-A3: var(--cyanA3);
+  --show-A4: var(--cyanA4);
+  --show-A5: var(--cyanA5);
+  --show-A6: var(--cyanA6);
+  --show-A7: var(--cyanA7);
+  --show-A8: var(--cyanA8);
+  --show-A9: var(--cyanA9);
+  --show-A10: var(--cyanA10);
+  --show-A11: var(--cyanA11);
+  --show-A12: var(--cyanA12);
+  --workshop-1: var(--crimson1);
+  --workshop-2: var(--crimson2);
+  --workshop-3: var(--crimson3);
+  --workshop-4: var(--crimson4);
+  --workshop-5: var(--crimson5);
+  --workshop-6: var(--crimson6);
+  --workshop-7: var(--crimson7);
+  --workshop-8: var(--crimson8);
+  --workshop-9: var(--crimson9);
+  --workshop-10: var(--crimson10);
+  --workshop-11: var(--crimson11);
+  --workshop-12: var(--crimson12);
+  --workshop-A1: var(--crimsonA1);
+  --workshop-A2: var(--crimsonA2);
+  --workshop-A3: var(--crimsonA3);
+  --workshop-A4: var(--crimsonA4);
+  --workshop-A5: var(--crimsonA5);
+  --workshop-A6: var(--crimsonA6);
+  --workshop-A7: var(--crimsonA7);
+  --workshop-A8: var(--crimsonA8);
+  --workshop-A9: var(--crimsonA9);
+  --workshop-A10: var(--crimsonA10);
+  --workshop-A11: var(--crimsonA11);
+  --workshop-A12: var(--crimsonA12);
+  --social-event-1: var(--yellow1);
+  --social-event-2: var(--yellow2);
+  --social-event-3: var(--yellow3);
+  --social-event-4: var(--yellow4);
+  --social-event-5: var(--yellow5);
+  --social-event-6: var(--yellow6);
+  --social-event-7: var(--yellow7);
+  --social-event-8: var(--yellow8);
+  --social-event-9: var(--yellow9);
+  --social-event-10: var(--yellow10);
+  --social-event-11: var(--yellow11);
+  --social-event-12: var(--yellow12);
+  --social-event-A1: var(--yellowA1);
+  --social-event-A2: var(--yellowA2);
+  --social-event-A3: var(--yellowA3);
+  --social-event-A4: var(--yellowA4);
+  --social-event-A5: var(--yellowA5);
+  --social-event-A6: var(--yellowA6);
+  --social-event-A7: var(--yellowA7);
+  --social-event-A8: var(--yellowA8);
+  --social-event-A9: var(--yellowA9);
+  --social-event-A10: var(--yellowA10);
+  --social-event-A11: var(--yellowA11);
+  --social-event-A12: var(--yellowA12);
+  --activity-foreground: white;
 
   /* Misc */
   --disabled-opacity: 0.6;
@@ -166,57 +191,85 @@
 }
 
 :where([data-activity-type="workshop"]) {
-  --activity1: var(--workshop1);
-  --activity2: var(--workshop2);
-  --activity3: var(--workshop3);
-  --activity4: var(--workshop4);
-  --activity5: var(--workshop5);
-  --activity6: var(--workshop6);
-  --activity7: var(--workshop7);
-  --activity8: var(--workshop8);
-  --activity9: var(--workshop9);
-  --activity10: var(--workshop10);
-  --activity11: var(--workshop11);
-  --activity12: var(--workshop12);
-  --activityA1: var(--workshopA1);
-  --activityA2: var(--workshopA2);
-  --activityA3: var(--workshopA3);
-  --activityA4: var(--workshopA4);
-  --activityA5: var(--workshopA5);
-  --activityA6: var(--workshopA6);
-  --activityA7: var(--workshopA7);
-  --activityA8: var(--workshopA8);
-  --activityA9: var(--workshopA9);
-  --activityA10: var(--workshopA10);
-  --activityA11: var(--workshopA11);
-  --activityA12: var(--workshopA12);
+  --activity1: var(--workshop-1);
+  --activity2: var(--workshop-2);
+  --activity3: var(--workshop-3);
+  --activity4: var(--workshop-4);
+  --activity5: var(--workshop-5);
+  --activity6: var(--workshop-6);
+  --activity7: var(--workshop-7);
+  --activity8: var(--workshop-8);
+  --activity9: var(--workshop-9);
+  --activity10: var(--workshop-10);
+  --activity11: var(--workshop-11);
+  --activity12: var(--workshop-12);
+  --activityA1: var(--workshop-A1);
+  --activityA2: var(--workshop-A2);
+  --activityA3: var(--workshop-A3);
+  --activityA4: var(--workshop-A4);
+  --activityA5: var(--workshop-A5);
+  --activityA6: var(--workshop-A6);
+  --activityA7: var(--workshop-A7);
+  --activityA8: var(--workshop-A8);
+  --activityA9: var(--workshop-A9);
+  --activityA10: var(--workshop-A10);
+  --activityA11: var(--workshop-A11);
+  --activityA12: var(--workshop-A12);
 }
 
 :where([data-activity-type="show"]) {
-  --activity1: var(--show1);
-  --activity2: var(--show2);
-  --activity3: var(--show3);
-  --activity4: var(--show4);
-  --activity5: var(--show5);
-  --activity6: var(--show6);
-  --activity7: var(--show7);
-  --activity8: var(--show8);
-  --activity9: var(--show9);
-  --activity10: var(--show10);
-  --activity11: var(--show11);
-  --activity12: var(--show12);
-  --activityA1: var(--showA1);
-  --activityA2: var(--showA2);
-  --activityA3: var(--showA3);
-  --activityA4: var(--showA4);
-  --activityA5: var(--showA5);
-  --activityA6: var(--showA6);
-  --activityA7: var(--showA7);
-  --activityA8: var(--showA8);
-  --activityA9: var(--showA9);
-  --activityA10: var(--showA10);
-  --activityA11: var(--showA11);
-  --activityA12: var(--showA12);
+  --activity1: var(--show-1);
+  --activity2: var(--show-2);
+  --activity3: var(--show-3);
+  --activity4: var(--show-4);
+  --activity5: var(--show-5);
+  --activity6: var(--show-6);
+  --activity7: var(--show-7);
+  --activity8: var(--show-8);
+  --activity9: var(--show-9);
+  --activity10: var(--show-10);
+  --activity11: var(--show-11);
+  --activity12: var(--show-12);
+  --activityA1: var(--show-A1);
+  --activityA2: var(--show-A2);
+  --activityA3: var(--show-A3);
+  --activityA4: var(--show-A4);
+  --activityA5: var(--show-A5);
+  --activityA6: var(--show-A6);
+  --activityA7: var(--show-A7);
+  --activityA8: var(--show-A8);
+  --activityA9: var(--show-A9);
+  --activityA10: var(--show-A10);
+  --activityA11: var(--show-A11);
+  --activityA12: var(--show-A12);
+}
+
+:where([data-activity-type="social-event"]) {
+  --activity1: var(--social-event-1);
+  --activity2: var(--social-event-2);
+  --activity3: var(--social-event-3);
+  --activity4: var(--social-event-4);
+  --activity5: var(--social-event-5);
+  --activity6: var(--social-event-6);
+  --activity7: var(--social-event-7);
+  --activity8: var(--social-event-8);
+  --activity9: var(--social-event-9);
+  --activity10: var(--social-event-10);
+  --activity11: var(--social-event-11);
+  --activity12: var(--social-event-12);
+  --activityA1: var(--social-event-A1);
+  --activityA2: var(--social-event-A2);
+  --activityA3: var(--social-event-A3);
+  --activityA4: var(--social-event-A4);
+  --activityA5: var(--social-event-A5);
+  --activityA6: var(--social-event-A6);
+  --activityA7: var(--social-event-A7);
+  --activityA8: var(--social-event-A8);
+  --activityA9: var(--social-event-A9);
+  --activityA10: var(--social-event-A10);
+  --activityA11: var(--social-event-A11);
+  --activityA12: var(--social-event-A12);
+  --activity-foreground: black;
 }
 
 :where([data-theme="light"]) {
