--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -50,3 +50,14 @@
   min-height: 100dvh;
   min-height: 100svh;
 }
+
+input[type="search"] {
+  &::-ms-clear { display: none; width : 0; height: 0; }
+
+  &::-ms-reveal { display: none; width : 0; height: 0; }
+
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-results-button,
+  &::-webkit-search-results-decoration { display: none; }
+}
