--- a/app/frontend/pages/Admin/Timetable/Grid/ActivityPicker/ActivityPicker.css
+++ b/app/frontend/pages/Admin/Timetable/Grid/ActivityPicker/ActivityPicker.css
@@ -27,6 +27,10 @@
       background: transparent;
       outline: none;
     }
+
+    .popover__close {
+      border-radius: 50%;
+    }
   }
 
   &__results {
