--- a/app/frontend/organisms/Header/Header.css
+++ b/app/frontend/organisms/Header/Header.css
@@ -40,8 +40,16 @@
     font-size: 1.5rem;
 
     a {
+      display: block;
       color: inherit;
       text-decoration: none;
+    }
+
+    .logo {
+      display: block;
+      width: 6.25rem;
+      height: 5rem;
+      margin: -1.5rem 0 -1.5rem -0.75rem;
     }
   }
 
