--- a/app/frontend/atoms/Input/Input.css
+++ b/app/frontend/atoms/Input/Input.css
@@ -8,7 +8,7 @@
   --input-padding-inline: var(--spacing);
   --input-background: var(--background-element);
   --input-foreground: var(--text);
-  --input-read-only-background: var(--background);
+  --input-read-only-background: transparent;
   --input-read-only-foreground: var(--text-subtle);
   --input-placeholder: var(--text-subtle);
   --input-hover: var(--border-hover);
@@ -59,6 +59,8 @@
   }
 
   &:where(:disabled) {
+    --input-hover: var(--border-element);
+
     background-color: var(--background);
     opacity: var(--disabled-opacity);
   }
